opLT cos exp abs

--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -96,7 +96,7 @@ and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
 Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
 and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \thmbox{\begin{array}{>{\ds}l        c>{\ds}l                                             D     l              @{\hspace{2pt}}l                                             C                       D}
-    \mc{3}{N}{Transform}                                                                & \mc{3}{|N}{Radius of Convergence}                                               & \mc{1}{|N}{Domain}    & \mc{1}{|N}{Property}
+    \mc{3}{H}{Transform}                                                                & \mc{3}{|H}{Radius of Convergence}                                               & \mc{1}{|N}{Domain}    & \mc{1}{|H}{Property}
   \\\hline
     \opLT\brs{\fg(x-\alpha)}        &=& e^{-\alpha s} \;\fG(s)                          & for & \Real(s)                    & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\ope{translation})
   \\\opLT\brs{\fg(\alpha x)}        &=& \frac{1}{\abs{\alpha}}\fG\brp{\frac{s}{\alpha}} & for & \Real\brp{\frac{s}{\alpha}} & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\ope{dilation})
@@ -147,7 +147,7 @@ and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 %--------------------------------------
 Let $\opLT$, $\fG(s)$, $A$, and $B$ be defined as in \prefpp{thm:opLT_transversal}.
 \corbox{\begin{array}{>{\ds}lc>{\ds}l   D       l              @{\hspace{2pt}}l     C                       D}
-    \mc{3}{N}{Transform}                & \mc{3}{|N}{Radius of Convergence}       & \mc{1}{|N}{Domain}    & \mc{1}{|N}{Property}
+    \mc{3}{H}{Transform}                & \mc{3}{|H}{Radius of Convergence}       & \mc{1}{|N}{Domain}    & \mc{1}{|H}{Property}
   \\\hline%                             &     &              &                    &                       &
     \opLT\brs{\fg(-x)}  &=& \fG\brp{-s} & for & \Real\brp{s} & \in\intcc{-B}{-A}  & \forall x,\alpha\in\C & (\ope{reversal})
 \end{array}}
@@ -185,7 +185,7 @@ and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
 Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
 and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \thmbox{\begin{array}{>{\ds}l        c>{\ds}l                                             D     l              @{\hspace{2pt}}l                                             C                       D}
-    \mc{3}{N}{Transform}                                                                & \mc{3}{|N}{Radius of Convergence}                                               & \mc{1}{|N}{Domain}    & \mc{1}{|N}{Property}
+    \mc{3}{H}{Transform}                                                                & \mc{3}{|H}{Radius of Convergence}                                               & \mc{1}{|N}{Domain}    & \mc{1}{|H}{Property}
   \\\hline
     \opLT\brs{\ff(x)+\fg(x)}        &=& \fF(s) + \fG(s)                                 & for & \Real(s)                    & \in\intcc{A}{B}\seti\intcc{C}{D}            & \forall x,\alpha\in\C & (\prope{additive})
   \\\opLT\brs{\alpha\fg(x)}         &=& \alpha\fG(s)                                    & for & \Real(s)                    & \in\intcc{A}{B}                             & \forall x,\alpha\in\C & (\prope{homogeneous})
@@ -204,7 +204,7 @@ is the \structe{radius of convergence} of $\opLT\brs{\ff(x)}$.
 Let $A_n$ and $B_n$ be real numbers such that $\intcc{A_n}{B_n}$
 is the \structe{radius of convergence} of $\opLT\brs{\fg_n(x)}$.
 \corbox{\begin{array}{>{\ds}l                      c  >{\ds}l                                       D     >{\ds}l                                               C}
-    \mc{3}{N}{Transform}                                                                          & \mc{2}{|N}{Radius of Convergence}                         & \mc{1}{|N}{Domain}
+    \mc{3}{H}{Transform}                                                                          & \mc{2}{|H}{Radius of Convergence}                         & \mc{1}{|N}{Domain}
   \\\hline
     \opLT\brs{ 0                               }  &=&  0                                          & for & \Real(s)\in\intcc{A}{B}                             & \forall x\in\C
   \\\opLT\brs{ -\fg(x)                         }  &=& -\opLT\brs{\fg(x)}                          & for & \Real(s)\in\intcc{A}{B}                             & \forall x\in\C
@@ -238,7 +238,7 @@ and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
 Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
 and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \thmbox{\begin{array}{>{\ds}l        c>{\ds}l           D     l        @{\hspace{2pt}}l                                C }
-    \mc{3}{N}{Transform}                              & \mc{3}{|N}{Radius of Convergence}                            & \mc{1}{|N}{Domain}    %& \mc{1}{|N}{Property}
+    \mc{3}{H}{Transform}                              & \mc{3}{|H}{Radius of Convergence}                            & \mc{1}{|N}{Domain}    %& \mc{1}{|H}{Property}
   \\\hline
     \opLT\brs{e^{-\alpha x} \fg(x)} &=& \fG(s+\alpha) & for & \Real(s) & \in\intcc{A-\Real(\alpha)}{B-\Real(\alpha)} & \forall x,\alpha\in\C %& (\ope{modulation})
 \end{array}}
@@ -269,7 +269,7 @@ and $\fF(s)\eqd \brs{\opLT\ff(x)}$.
 Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
 and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
 \corbox{\begin{array}{>{\ds}l               c>{\ds}r                                                       D     l        @{\hspace{2pt}}l   C }
-    \mc{3}{N}{Transform}                                                                                 & \mc{3}{|N}{Radius of Convergence}                                               & \mc{1}{|N}{Domain}    %& \mc{1}{|N}{Property}
+    \mc{3}{H}{Transform}                                                                                 & \mc{3}{|H}{Radius of Convergence}                                               & \mc{1}{|N}{Domain}    %& \mc{1}{|H}{Property}
   \\\hline
     \opLT\brs{\cos\brp{\omega_o x} \fg(x)} &=&  \frac{1}{2}\fG(s-i\omega_o) + \frac{1}{2}\fG(s+i\omega_o) & for & \Real(s) & \in\intcc{A}{B} & \forall x,\alpha\in\C %& (\ope{modulation})
   \\[2ex]
@@ -329,7 +329,7 @@ The \fnctd{Heaviside step function} $\step(x)$ or \fnctd{unit step function} is 
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
 \thmbox{\begin{array}{>{\ds}lc>{\ds}l         Dl                                   C                 }
-    \mc{3}{N}{Transform}                    & \mc{2}{|N}{Radius of Convergence} & \mc{1}{|N}{Domain}
+    \mc{3}{H}{Transform}                    & \mc{2}{|H}{Radius of Convergence} & \mc{1}{|N}{Domain}
   \\\hline
     \opLT\brs{\step(x)}     &=& \frac{1}{s} & for & \Real(s) > 0                      & \forall x\in\R
 \end{array}}
@@ -363,7 +363,7 @@ and $\step(x)$ the \fncte{unit step} function.
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
 \corbox{\begin{array}{F>{\ds}lc>{\ds}c     D     l                             C }
-    \mc{3}{N}{Transform}                & \mc{2}{|N}{Radius of Convergence} & \mc{1}{|N}{Domain}
+    \mc{3}{H}{Transform}                & \mc{2}{|H}{Radius of Convergence} & \mc{1}{|N}{Domain}
   \\\hline
          (1).& \opLT\brs{\step(x)\cos(\omega_o x)}  &=& \frac{s}{s^2+\omega_o^2}         & for & \Real(s) > 0 & x,\omega_o\in\R
   \\[2ex](2).& \opLT\brs{\step(x)\sin(\omega_o x)}  &=& \frac{\omega_o}{s^2+\omega_o^2}  & for & \Real(s) > 0 & x,\omega_o\in\R
@@ -428,7 +428,7 @@ and $\step(x)$ the \fncte{unit step} function.
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
 \corbox{\begin{array}{F>{\ds}lc>{\ds}c     D     l                             C }
-    \mc{3}{N}{Transform}                & \mc{2}{|N}{Radius of Convergence} & \mc{1}{|N}{Domain}
+    \mc{3}{H}{Transform}                & \mc{2}{|H}{Radius of Convergence} & \mc{1}{|N}{Domain}
   \\\hline
            (1).&\opLT\brs{\step(x)\cos(\omega_o x)e^{-\alpha x}} &=& \frac{s+\alpha}{(s+\alpha)^2+\omega_o^2}  & for & \Real(s) > -\Real(\alpha) & x,\omega_o\in\R;\,\alpha\in\C
     \\[2ex](2).&
@@ -518,6 +518,55 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 \begin{corollary}
 \footnote{
   \citerpgc{bracewell1978}{227}{007007013X}{Table 11.2 Some Laplace transforms},
+  %\citerpcu{levy1958}{19}{with $\psi=0$, $\alpha_0=\alpha$, and $\alpha_1=1$}{https://archive.org/details/c_cowles_ieee_Levy/page/n21/},
+  %\url{http://ece-research.unm.edu/bsanthan/ece541/table_ME.pdf}
+  }
+\label{cor:opLT_expabs}
+%---------------------------------------
+Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
+and $\step(x)$ the \fncte{unit step} function.
+Let $A\eqd\Real(\alpha)$.
+\corbox{\begin{array}{>{\ds}lc>{\ds}l                                    D     l                            C }
+    \mc{3}{H}{Transform}                                               & \mc{2}{|H}{Radius of Convergence}& \mc{1}{|H}{Domain}
+  \\\hline%                                                            &                                  &
+    \opLT\brs{e^{-\alpha\abs{x}}}  &=& \frac{2\alpha}{\alpha^2 - s^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
+\end{array}}
+\end{corollary}
+\begin{proof}
+  \begin{align*}
+    \opLT\brs{e^{-\alpha\abs{x}}}
+      &\eqd \int_\R e^{-\alpha\abs{x}} e^{-sx} \dx
+      && \text{by definition of $\opLT$}
+      && \text{\xref{def:opLT}}
+    \\&\eqd \int_\R \step( x) e^{-\alpha x} e^{-sx} \dx
+       +    \int_\R \step(-x) e^{ \alpha x} e^{-sx} \dx
+      && \text{by definition of $\step(x)$}
+      && \text{\xref{def:step}}
+    \\&= \mathrlap{
+         \mcom{\opLT\brs{\step( x) e^{-\alpha x}}}{$\forall\Real(s)\in\intoo{0-\Real(\alpha)}{\infty-\Real(\alpha)}$}
+       + \mcom{\opLT\brs{\step(-x) e^{ \alpha x}}}{$\forall\Real(s)\in\intoo{\Real(\alpha)-\infty}{\Real(\alpha)-0}$}
+         \qquad\begin{array}{MM}
+           by&\prefp{thm:opLT_mod} and\\
+             &\prefp{thm:opLT_step}
+         \end{array}
+         }
+     %&& \forall\Real(s)\in\intoo{0-\Real(\alpha)}{\infty-\Real(\alpha)}\seti\intoo{\Real(\alpha)-\infty}{\Real(\alpha)-0}
+     %&& \text{by definition of $\opLT$}
+     %&& \text{\xref{def:opLT}}
+    \\&= \brs{\frac{1}{s+\alpha}} + \brs{\frac{-1}{s-\alpha}}
+      && \forall\Real(s)\in\intoo{-\Real(\alpha)}{\Real(\alpha)}
+      && \text{by \pref{thm:opLT_step} and \pref{thm:opLT_mod}}
+    \\&= \frac{(s-\alpha)-(s+\alpha)}{(s+\alpha)(s-\alpha)}
+      && \forall\Real(s)\in\intoo{-\Real(\alpha)}{\Real(\alpha)}
+    \\&= \frac{2\alpha}{\alpha^2 - s^2}
+      && \forall\Real(s)\in\intoo{-\Real(\alpha)}{\Real(\alpha)}
+  \end{align*}
+\end{proof}
+
+%---------------------------------------
+\begin{corollary}
+\footnote{
+  \citerpgc{bracewell1978}{227}{007007013X}{Table 11.2 Some Laplace transforms},
   \citerpcu{levy1958}{19}{with $\psi=0$, $\alpha_0=\alpha$, and $\alpha_1=1$}{https://archive.org/details/c_cowles_ieee_Levy/page/n21/},
   \url{http://ece-research.unm.edu/bsanthan/ece541/table_ME.pdf}
   %\url{https://ethz.ch/content/dam/ethz/special-interest/baug/ibk/structural-mechanics-dam/education/identmeth/fourier.pdf}
@@ -526,70 +575,47 @@ Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 %---------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}
 and $\step(x)$ the \fncte{unit step} function.
+Let $A\eqd\Real(\alpha)$.
 \corbox{\begin{array}{F>{\ds}lc>{\ds}l                                    D     l                                                    C }
-    &\mc{3}{N}{Transform}                                               & \mc{2}{|N}{Radius of Convergence}                        & \mc{1}{|N}{Domain}
-  \\\hline
-    (1).& \opLT\brs{e^{-\alpha\abs{x}}}  &=& \frac{2\alpha}{\alpha^2 - s^2}  & for & \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)} & x,\alpha\in\R
-  \\(2).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step( x)}  &=& \frac{ s+\alpha}{(s+\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)} & x,\alpha\in\R
-  \\(3).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}  &=& \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)} & x,\alpha\in\R
-  \\(4).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}         }  &=& \frac{ s+\alpha}{(s+\alpha)^2 + \omega_o^2} +  \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)} & x,\alpha\in\R
+    &\mc{3}{H}{Transform}                                                                                          & \mc{2}{|H}{Radius of Convergence}& \mc{1}{|H}{Domain}
+  \\\hline%                                                                                                        &                                  &
+    (1).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step( x)}  &=& \frac{ s+\alpha}{(s+\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
+  \\(2).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}  &=& \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
+  \\(3).& \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}         }  &=& \frac{ s+\alpha}{(s+\alpha)^2 + \omega_o^2} +  \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}  & for & \Real(s) \in \intoo{-A}{A} & x,\alpha\in\R
 \end{array}}
 \end{corollary}
 \begin{proof}
-\begin{align*}
-  \opLT\brs{e^{-\alpha\abs{x}}}
-    &\eqd \int_\R e^{-\alpha\abs{x}} e^{-sx} \dx
-    && \text{by definition of $\opLT$}
-    && \text{\xref{def:opLT}}
-  \\&\eqd \int_\R \step( x) e^{-\alpha x} e^{-sx} \dx
-     +    \int_\R \step(-x) e^{ \alpha x} e^{-sx} \dx
-    && \text{by definition of $\step(x)$}
-    && \text{\xref{def:step}}
-  \\&= \mathrlap{
-       \mcom{\opLT\brs{\step( x) e^{-\alpha x}}}{$\forall\Real(s)\in\intoo{0-\Real(\alpha)}{\infty-\Real(\alpha)}$}
-     + \mcom{\opLT\brs{\step(-x) e^{ \alpha x}}}{$\forall\Real(s)\in\intoo{\Real(\alpha)-\infty}{\Real(\alpha)-0}$}
-       \qquad\begin{array}{MM}
-         by&\prefp{thm:opLT_mod} and\\
-           &\prefp{thm:opLT_step}
-       \end{array}
-       }
-   %&& \forall\Real(s)\in\intoo{0-\Real(\alpha)}{\infty-\Real(\alpha)}\seti\intoo{\Real(\alpha)-\infty}{\Real(\alpha)-0}
-   %&& \text{by definition of $\opLT$}
-   %&& \text{\xref{def:opLT}}
-  \\&= \brs{\frac{1}{s+\alpha}} + \brs{\frac{-1}{s-\alpha}}
-    && \forall\Real(s)\in\intoo{-\Real(\alpha)}{\Real(\alpha)}
-    && \text{by \pref{thm:opLT_step} and \pref{thm:opLT_mod}}
-  \\&= \frac{(s-\alpha)-(s+\alpha)}{(s+\alpha)(s-\alpha)}
-    && \forall\Real(s)\in\intoo{-\Real(\alpha)}{\Real(\alpha)}
-  \\&= \frac{2\alpha}{\alpha^2 - s^2}
-    && \forall\Real(s)\in\intoo{-\Real(\alpha)}{\Real(\alpha)}
-  \end{align*}
+\begin{enumerate}
+  \item Proof for (1):
+    \begin{align*}
+      &\opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(x)}
+      \\&= \opLT\brs{\cos( \omega_o x)e^{-\alpha x}\step( x)}
+        && \text{by definition of $\step(x)$}
+        && \text{\xref{def:step}}
+      \\&= \frac{s+\alpha}{(s+\alpha)^2 + \omega_o^2}
+        && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
+        && \text{by \prefp{cor:opLT_step} and \prefp{thm:opLT_mod}}
+    \end{align*}
 
-  \begin{align*}
-    \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(x)}
-      &= \opLT\brs{\cos( \omega_o x)e^{-\alpha x}\step( x)}
-      && \text{by definition of $\step(x)$}
-      && \text{\xref{def:step}}
-    \\&= \frac{s+\alpha}{(s+\alpha)^2 + \omega_o^2}
-      && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
-      && \text{by \prefp{cor:opLT_step} and \prefp{thm:opLT_mod}}
-  \\\\
-    \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}
-      &= \opLT\brs{\cos(-\omega_o x)e^{ \alpha x}\step(-x)}
-    \\&= \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}
-      && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
-      && \text{by \prefp{cor:opLT_step} and \prefp{thm:opLT_mod}}
-\end{align*}
+  \item Proof for (2):
+    \begin{align*}
+      &\opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}
+      \\&= \opLT\brs{\cos(-\omega_o x)e^{ \alpha x}\step(-x)}
+      \\&= \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}
+        && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
+        && \text{by \prefp{cor:opLT_step} and \prefp{thm:opLT_mod}}
+    \end{align*}
 
-\begin{align*}
-    \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}}
-      &= \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(x)}
-       + \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}
-    \\&= \opLT\brs{\cos( \omega_o x)e^{-\alpha x}\step( x)}
-       + \opLT\brs{\cos(-\omega_o x)e^{ \alpha x}\step(-x)}
-    \\&= \frac{s+\alpha}{(s+\alpha)^2 + \omega_o^2} +  \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}
-      && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
-\end{align*}
+  \item Proof for (3):
+    \begin{align*}
+      &\opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}}
+      \\&= \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(x)}
+         + \opLT\brs{\cos(\omega_o x)e^{-\alpha\abs{x}}\step(-x)}
+      \\&= \opLT\brs{\cos( \omega_o x)e^{-\alpha x}\step( x)}
+         + \opLT\brs{\cos(-\omega_o x)e^{ \alpha x}\step(-x)}
+      \\&= \frac{s+\alpha}{(s+\alpha)^2 + \omega_o^2} +  \frac{-s+\alpha}{(s-\alpha)^2 + \omega_o^2}
+        && \forall \Real(s) \in \intoo{-\Real(\alpha)}{\Real(\alpha)}
+    \end{align*}
 %\end{proof}
 
 %%-------------------------------------
@@ -614,23 +640,23 @@ and $\step(x)$ the \fncte{unit step} function.
 %\end{array}}
 %\end{example}
 %\begin{proof}
-\begin{enumerate}
-%  \item lemma: \label{ilem:opLT_cosexpstep}
-%    \\$\begin{array}{>{\ds}rclM}
-%         \lim_{x\to\infty}\brs{\frac{e^{(-s -\alpha \pm i\beta)x}}{-s -\alpha \pm i\beta}}
-%           &=& \brbl{\begin{array}{lMM}
-%                 0      & if $\Real(s)>-\alpha$ \\
-%                 \infty & otherwise  & (diverges)
-%               \end{array}}
-%         \\
-%         \lim_{x\to-\infty}\brs{\frac{e^{(-s +\alpha \pm i\beta)x}}{-s +\alpha \pm i\beta}}
-%           &=& \brbl{\begin{array}{lMM}
-%                 0      & if $\Real(s)<\alpha$ \\
-%                 \infty & otherwise  & (diverges)
-%               \end{array}}
-%       \end{array}$
+%\begin{enumerate}
+  \item lemma: \label{ilem:opLT_cosexpstep}
+    \\$\begin{array}{>{\ds}rclM}
+         \lim_{x\to\infty}\brs{\frac{e^{(-s -\alpha \pm i\beta)x}}{-s -\alpha \pm i\beta}}
+           &=& \brbl{\begin{array}{lMM}
+                 0      & if $\Real(s)>-\alpha$ \\
+                 \infty & otherwise  & (diverges)
+               \end{array}}
+         \\
+         \lim_{x\to-\infty}\brs{\frac{e^{(-s +\alpha \pm i\beta)x}}{-s +\alpha \pm i\beta}}
+           &=& \brbl{\begin{array}{lMM}
+                 0      & if $\Real(s)<\alpha$ \\
+                 \infty & otherwise  & (diverges)
+               \end{array}}
+       \end{array}$
 
-  \item Alternate proof (more direct):
+  \item Alternate proof for (1):
     \begin{align*}
       &\boxed{\opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}\step(x)}}
       \\&\eqd \int_{\R} \cos(\beta x)e^{-\alpha\abs{x}} e^{-s x} \step(x)\dx
@@ -658,16 +684,6 @@ and $\step(x)$ the \fncte{unit step} function.
         && \Real(s)>-\alpha
     \end{align*}
 
-  \item  Alternate proof:
-    \begin{align*}
-      \boxed{\opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}\step(-x)}}
-        &= \opLT\brs{\cos(-\beta x)e^{-\alpha\abs{-x}}\step(-x)}
-      \\&= \frac{1}{\abs{-1}}\brs{\frac{s/(-1) +\alpha}{(s/(-1) +\alpha)^2 + \beta^2}}
-        && \text{by \prefp{thm:opLT_dilation}}
-      \\&= \boxed{\frac{-s +\alpha}{(s -\alpha)^2 + \beta^2}}
-        && \Real(s)<\alpha
-    \end{align*}
-
   \item lemma: \label{ilem:opLT_cosexp}
     \\$\begin{array}{>{\ds}rclM}
          \lim_{x\to-\infty}\brs{e^{(-s + \alpha + i\beta)x} + e^{(s + \alpha -i\beta)x}}
@@ -683,7 +699,7 @@ and $\step(x)$ the \fncte{unit step} function.
                \end{array}}
        \end{array}$
 
-  \item Alternate proof:
+  \item Alternate proof for (3):
     \begin{align*}
       \boxed{\opLT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}}
         &\eqd \int_{\R} \cos(\beta x)e^{-\alpha\abs{x}} e^{-s x}\dx
